Adição de imagens

--- a/home.html
+++ b/home.html
@@ -37,7 +37,8 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png"  />
+        <img style= "border-radius: 2rem;"
+        src="./assets/img1.jpeg"  />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Olá, nós somos o</p>
@@ -52,7 +53,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/"
+            src="./assets/img2.jpg"
             class="about-pic"
           />
         </div>
