--- a/home.html
+++ b/home.html
@@ -1,177 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neto Virtual</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
-  </head>
-  <body>
-    <nav id="desktop-nav">
-      <div class="logo">
-        Neto Virtual</div>
-      <div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neto Virtual</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="mediaqueries.css" />
+</head>
+
+<body>
+  <nav id="desktop-nav">
+    <div class="logo">
+      Neto Virtual</div>
+    <div>
+      <ul class="nav-links">
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#about">Equipe</a></li>
+        <li><a href="#contact">Contato</a></li>
+      </ul>
+    </div>
+  </nav>
+  <nav id="hamburger-nav">
+    <div class="logo">Neto Virtual</div>
+    <div class="hamburger-menu">
+      <div class="hamburger-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="menu-links">
+        <li><a href="#about" onclick="toggleMenu()">Sobre</a></li>
+        <li><a href="#equipe" onclick="toggleMenu()">Equipe</a></li>
+        <li><a href="#contact" onclick="toggleMenu()">Contatos</a></li>
+      </div>
+    </div>
+  </nav>
+  <section id="profile">
+    <div class="section__pic-container">
+      <img style="border-radius: 2rem;" src="./assets/img1.jpeg" />
+    </div>
+    <div class="section__text">
+      <p class="section__text__p1">Olá, nós somos o</p>
+      <h1 class="title">Neto Virtual</h1>
+      <p class="section__text__p2">Facilitando a vida digital dos idosos</p>
+
+    </div>
+  </section>
+  <section id="about">
+    <p class="section__text__p1">Conheça mais</p>
+    <h1 class="title">Sobre nós</h1>
+    <div class="section-container">
+      <div class="section__pic-container">
+        <img src="./assets/img2.jpg" class="about-pic" />
+      </div>
+      <div class="about-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h3>Nossa proposta</h3>
+            <p>É desenvolver um app como uma solução
+              para ensinar idosos a usarem o celular de
+              maneira divertida e eficaz, por meio de
+              um app gamificado.</p>
+          </div>
+          <div class="details-container">
+            <p>O aplicativo simplifica tarefas comuns, como
+              enviar mensagens, fazer videochamadas e
+              navegar na internet, tudo por meio de uma
+              metodologia de aprendizado leve e gradual.</p>
+          </div>
+        </div>
+        <p>O aplicativo simplifica tarefas comuns, como
+          Nosso diferencial é ensinar com carinho
+          e paciência, adaptando-se ao ritmo de
+          aprendizado dos idosos.
+        </p>
+
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <h1>01</h1>
+              <p>ÉInterface simples e intuitiva,
+                com ícones maiores e
+                textos legíveis.</p>
+            </div>
+            <div class="details-container">
+              <h1>02</h1>
+              <p>Experiência gamificada que
+                incentiva o aprendizado por
+                meio de pontos, desafios e
+                recompensas.</p>
+            </div>
+            <div class="details-container">
+              <h1>03</h1>
+              <p>Promove a independência
+                digital e a autoestima dos
+                idosos.</p>
+            </div>
+          </div>
+        </div>
+  </section>
+  </section>
+  <section id="about">
+    <p class="section__text__p1">Conheça nossa</p>
+    <h1 class="title">Equipe</h1>
+    <div class="section-container">
+      <div class="about-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2>Líder</h2>
+            <p>Pedro Henrique Soares Gomes de
+              Araújo</p>
+          </div>
+          <div class="details-container">
+            <h2>Cientista de Dados</h2>
+            <p>Ana Luísa da Penha Matos</p>
+          </div>
+          <div class="details-container">
+            <h2>Especialistas em UX</h2>
+            <p>Daniel Pereira da Silva</p>
+            <p>Lucas de Azevedo Paulino</p>
+          </div>
+          <div class="details-container">
+            <h2>Designer UI</h2>
+            <p>Amanda Cristina de Castro Costa</p>
+          </div>
+          <div class="details-container">
+            <h2>Tecnólogo</h2>
+            <p>Gabriel Henrique de Oliveira Pereira</p>
+          </div>
+          <div class="details-container">
+            <h2>Documentadores</h2>
+            <p>Andressa Gabrielly Araújo de Souza</p>
+            <p>Pedro Lucas Neves Lopes</p>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <section id="contact">
+    <p class="section__text__p1">Fale conosco!</p>
+    <h1 class="title">Contatos</h1>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="./assets/email.png" class="icon contact-icon email-icon" />
+        <p><a href="mailto:pedrohsgaraujo@gmail.com">pedrohsgaraujo@gmail.com</a></p>
+      </div>
+      <div class="contact-info-container">
+        <img src="./assets/whatsapp.png" class="icon contact-icon email-icon" />
+        <p><a href="https://wa.me/5561986392439">Whatsapp</a></p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <div class="nav-links-container">
         <ul class="nav-links">
           <li><a href="#about">Sobre</a></li>
-          <li><a href="#about">Equipe</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
       </div>
     </nav>
-    <nav id="hamburger-nav">
-      <div class="logo">Neto Virtual</div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">Sobre</a></li>
-          <li><a href="#equipe" onclick="toggleMenu()">Equipe</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contatos</a></li>
-        </div>
-      </div>
-    </nav>
-    <section id="profile">
-      <div class="section__pic-container">
-        <img style= "border-radius: 2rem;"
-        src="./assets/img1.jpeg"  />
-      </div>
-      <div class="section__text">
-        <p class="section__text__p1">Olá, nós somos o</p>
-        <h1 class="title">Neto Virtual</h1>
-        <p class="section__text__p2">Facilitando a vida digital dos idosos</p>
+    <p>Copyright &#169; 2024 Neto Virtual. Todos os direitos reservados.</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
 
-      </div>
-    </section>
-    <section id="about">
-      <p class="section__text__p1">Conheça mais</p>
-      <h1 class="title">Sobre nós</h1>
-      <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assets/img2.jpg"
-            class="about-pic"
-          />
-        </div>
-        <div class="about-details-container">
-          <div class="about-containers">
-            <div class="details-container">
-              <h3>Nossa proposta</h3>
-              <p>É desenvolver um app como uma solução
-                para ensinar idosos a usarem o celular de
-                maneira divertida e eficaz, por meio de
-                um app gamificado.</p>
-            </div>
-            <div class="details-container">
-                <p>O aplicativo simplifica tarefas comuns, como
-                enviar mensagens, fazer videochamadas e
-                navegar na internet, tudo por meio de uma
-                metodologia de aprendizado leve e gradual.</p>
-            </div>
-        </div>
-        <p>O aplicativo simplifica tarefas comuns, como
-            Nosso diferencial é ensinar com carinho
-e paciência, adaptando-se ao ritmo de
-aprendizado dos idosos.
-            </p>
-        
-      <div class="about-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h1>01</h1>
-            <p>ÉInterface simples e intuitiva,
-                com ícones maiores e
-                textos legíveis.</p>
-          </div>
-          <div class="details-container">
-            <h1>02</h1>
-            <p>Experiência gamificada que
-                incentiva o aprendizado por
-                meio de pontos, desafios e
-                recompensas.</p>
-          </div>
-          <div class="details-container">
-            <h1>03</h1>
-            <p>Promove a independência
-                digital e a autoestima dos
-                idosos.</p>
-          </div>
-        </div>
-    </div>
- </section>
-</section>
-<section id="about">
-  <p class="section__text__p1">Conheça nossa</p>
-  <h1 class="title">Equipe</h1>
-  <div class="section-container"> 
-  <div class="about-details-container">
-    <div class="about-containers">
-      <div class="details-container">
-        <h2>Líder</h2>
-        <p>Pedro Henrique Soares Gomes de
-            Araújo</p>
-      </div>
-      <div class="details-container">
-        <h2>Cientista de Dados</h2>
-        <p>Ana Luísa da Penha Matos</p>
-      </div>
-      <div class="details-container">
-        <h2>Especialistas em UX</h2>
-        <p>Daniel Pereira da Silva</p>
-        <p>Lucas de Azevedo Paulino</p>
-      </div>
-      <div class="details-container">
-        <h2>Designer UI</h2>
-        <p>Amanda Cristina de Castro Costa</p>
-      </div>
-      <div class="details-container">
-        <h2>Tecnólogo</h2>
-        <p>Gabriel Henrique de Oliveira Pereira</p>
-      </div>
-      <div class="details-container">
-        <h2>Documentadores</h2>
-        <p>Andressa Gabrielly Araújo de Souza</p>
-        <p>Pedro Lucas Neves Lopes</p>
-      </div>
-    </div>
-</div>
-</section>
-    
-    <section id="contact">
-      <p class="section__text__p1">Fale conosco!</p>
-      <h1 class="title">Contatos</h1>
-      <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="mailto:pedrohsgaraujo@gmail.com">pedrohsgaraujo@gmail.com</a></p>
-        </div>
-        <div class="contact-info-container">
-            <img
-            src="./assets/whatsapp.png"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="https://wa.me/5561986392439">Whatsapp</a></p>
-        </div>
-      </div>
-    </section>
-    <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="#contact">Contato</a></li>
-          </ul>
-        </div>
-      </nav>
-      <p>Copyright &#169; 2024 Neto Virtual. Todos os direitos reservados.</p>
-    </footer>
-    <script src="script.js"></script>
-  </body>
 </html>
