--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Neto Virtual</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="mediaqueries.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/mediaqueries.css" />
 </head>
 
 <body>
@@ -39,7 +39,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img style="border-radius: 2rem;" src="./assets/img1.jpeg" />
+      <img style="border-radius: 2rem;" src="./assets/images/img1.jpeg" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Olá, nós somos o</p>
@@ -53,7 +53,7 @@
     <h1 class="title">Sobre nós</h1>
     <div class="section-container">
       <div class="section__pic-container">
-        <img src="./assets/img2.jpg" class="about-pic" />
+        <img src="./assets/images/img2.jpg" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
@@ -144,11 +144,11 @@
     <h1 class="title">Contatos</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="./assets/email.png" class="icon contact-icon email-icon" />
+        <img src="./assets/images/email.png" class="icon contact-icon email-icon" />
         <p><a href="mailto:pedrohsgaraujo@gmail.com">pedrohsgaraujo@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
-        <img src="./assets/whatsapp.png" class="icon contact-icon email-icon" />
+        <img src="./assets/images/whatsapp.png" class="icon contact-icon email-icon" />
         <p><a href="https://wa.me/5561986392439">Whatsapp</a></p>
       </div>
     </div>
@@ -164,7 +164,7 @@
     </nav>
     <p>Copyright &#169; 2024 Neto Virtual. Todos os direitos reservados.</p>
   </footer>
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
